--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,7 +1,9 @@
 name: CI/CD
+
 on:
   push:
   pull_request:
+
 jobs:
   lint:
     name: Lint code with black
@@ -9,6 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: psf/black@stable
+
   test:
     name: Run unit tests
     needs: lint
@@ -16,23 +19,14 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
-        python-version: ["3.8"]
-        include:
-          - os: ubuntu-latest
-            python-version: "3.6"
-          - os: ubuntu-latest
-            python-version: "3.7"
-          - os: ubuntu-latest
-            python-version: "3.9"
-          - os: ubuntu-latest
-            python-version: "3.10"
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
     steps:
       - name: Check out repo
         uses: actions/checkout@v3
-      - name: Set up Node.js 16
+      - name: Set up Node.js 18
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
@@ -48,15 +42,16 @@ jobs:
         run: |
           python -m pytest --cov=pydantic2ts
       - name: Generate LCOV File
-        if: ${{ matrix.os == 'ubuntu-latest' && matrix.python-version == '3.8' }}
+        if: ${{ matrix.os == 'ubuntu-latest' && matrix.python-version == '3.9' }}
         run: |
           coverage lcov
       - name: Coveralls
-        if: ${{ matrix.os == 'ubuntu-latest' && matrix.python-version == '3.8' }}
+        if: ${{ matrix.os == 'ubuntu-latest' && matrix.python-version == '3.9' }}
         uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           path-to-lcov: coverage.lcov
+
   deploy:
     name: Deploy to PyPi
     runs-on: ubuntu-latest
@@ -64,10 +59,10 @@ jobs:
     needs: test
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python 3.8
+      - name: Set up Python 3.9
         uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: 3.9
       - name: Install dependencies
         run: |
           python -m pip install -U pip wheel
