--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -55,7 +55,7 @@ jobs:
   deploy:
     name: Deploy to PyPi
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
     needs: test
     steps:
       - uses: actions/checkout@v3
@@ -68,7 +68,7 @@ jobs:
           python -m pip install -U pip wheel
       - name: Build dist
         run: |
-          python setup.py sdist bdist_wheel bdist_egg
+          python setup.py sdist bdist_wheel
       - name: Publish package
         uses: pypa/gh-action-pypi-publish@v1.5.0
         with:
