--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -20,6 +20,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
         python-version: ["3.9", "3.10", "3.11", "3.12"]
+        pydantic-version: ["<2.0.0", ">=2.0.0"]
     steps:
       - name: Check out repo
         uses: actions/checkout@v4
@@ -37,6 +38,7 @@ jobs:
       - name: Install python dependencies
         run: |
           python -m pip install -U pip wheel pytest pytest-cov coverage
+          python -m pip install -U "pydantic${{ matrix.pydantic-version }}"
           python -m pip install -U .
       - name: Run tests
         run: |
